syntax = "proto3";

package order.v1;

import "google/protobuf/timestamp.proto";

enum FulfillmentType {
    FULFILLMENT_TYPE_UNSPECIFIED = 0;
    FULFILLMENT_TYPE_DELIVERY = 1;
    FULFILLMENT_TYPE_PICKUP = 2;
}

enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_PENDING = 1;
    STATUS_CONFIRMED = 2;
    STATUS_CANCELLED = 3;
}

message OrderItem {
    string item_id = 1;
    int32 quantity = 2;
    string comment = 3;
}

message Delivery {
    string address = 1;
    string comment = 2;
}

message PlaceOrderRequest {
    string user_id = 1;
    string restaurant_id = 2;
    repeated OrderItem items = 3;
    FulfillmentType fulfillment_type = 4;
    Delivery delivery = 5;
}

message PlaceOrderResponse {
    string order_id = 1;
    Status status = 2;
    google.protobuf.Timestamp created_at = 3;
}

service OrderService {
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
}
